--- a/p00/index.html
+++ b/p00/index.html
@@ -11,11 +11,17 @@
    <div id="nombre"></div>
    <div id="edad"></div>
    <script>
+    
     var nombre = prompt("Nombre", "");
     var edad = prompt ("Edad", 0);
 
     var div1 = document.getElementById("nombre");
     div1.innerHTML = "<h3>Nombre: "  +nombre+ " </h3> ";
+
+
+    var div2 = document.getElementById("edad");
+    div1.innerHTML = "<h3>Edad: "  +edad+ " </h3> ";
+
    </script>
 </body>
 </html>
